--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,2 +1,12 @@
 /* @import './base.css'; */
 
+button {
+    /* background-color: #4CAF50; */
+    border: none;
+    /* color: white; */
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
